--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,6 @@
             </div>
         </template>
 
-        <script src="./index.ts"></script>
+        <!--<script src="./index.ts"></script>-->
     </body>
 </html>
