feat: added styles

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,23 @@
     <body>
         <header>
             <h1>News Portal</h1>
+            <img src="./assets/images/read.png" alt="read" width="53" height="46">
         </header>
         <main>
             <div class="sources buttons"></div>
             <div class="news"></div>
         </main>
         <footer>
-            <p class="copyright">
-                Copyright <a href="https://newsapi.org">NewsAPI</a>
-            </p>
+            <div class="footer">
+                <div class="gh-profile">
+                    <img src="./assets/images/github-logo.png" alt="github logo" width="30" height="35">
+                    <a href="https://github.com/KatsiarynaMizhuryna" class="gh-profile" target="_blank">
+                        <p class="gh-profile-name">KatsiarynaMizhuryna</p></a>
+                </div>
+                <a class="anchor" href="https://rs.school/js-en/">
+                    <img class="rss-logo" src="./assets/images/rs_school_js.svg" alt="RSSchool logo" width="73" height="26"></a>
+                <div class="year">© 2023</div>
+            </div>
         </footer>
 
         <template id="sourceItemTemp">
